--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
     <style type="text/css">
+
+    @media only screen and (max-width: 480px) {
+  body { font-size: 12px;}
+  header p { padding-left: 4.5em;}
+}
     header, footer, .container { max-width: 45em; margin: 0 auto; }
 	header { padding: 0 0.5em; color: #C90B0B; }
 	header img { border-radius: 40px; float: left; }
