--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
+    <style type="text/css">
+    	header { padding: 0 0.5em; color: #C90B0B; }
+		header img { border-radius: 40px; float: left; }
+		header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
+		header p span { font-size: 0.8em; font-weight: normal;}
+    </style>
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
