--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <style type="text/css">
+    a { color: #12C; }
+a:visited { color: #61C; }
+a:focus { outline: thin dotted; }
+a:hover, a:active { color: #c00; outline: 0; }
+
+    html {
+  font-size: 100%;
+  overflow-y: scroll;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: none;
+}
+
+body { background: #fff; }
+header, footer, .container { max-width: 45em; margin: 0 auto; }
     	header { padding: 0 0.5em; color: #C90B0B; }
 		header img { border-radius: 40px; float: left; }
 		header p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
