--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <style type="text/css">
-    	footer span { float: right; font-style: italic; }
-    </style>
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
@@ -66,8 +63,9 @@
       </div>
 
       <footer>
-        <p>&copy; Web Performance 2014 </p>
+        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
     </div>
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   </body>
 </html>
