css mobile to html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
+		<style type="text/css">
+			/* Smartphones (portrait) */
+@media only screen and (max-width: 480px) {
+  body { font-size: 12px;}
+  header p { padding-left: 4.5em;}
+}
 
+		</style>
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
 
     <link href="css/style.css" rel="stylesheet">
