--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
-		<style type="text/css">
-			/* Smartphones (portrait) */
-@media only screen and (max-width: 480px) {
-  body { font-size: 12px;}
-  header p { padding-left: 4.5em;}
-}
 
-		</style>
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
+    <link rel="stylesheet"  href="css/mobile.css">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -28,6 +22,7 @@
     </script>
     <script async src="http://www.google-analytics.com/analytics.js" ></script>
     <script async src="js/perfmatters.js" ></script>
+
   </head>
 
   <body>
