add profile info

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ footer {
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <br>
+      <a href="/"><img src="img/myProfilepic.jpg"></a>
+      <p>Raman Trus<br><span>+375259530716 <a href="mailto:radadendronroma@gmail.com">radadendronroma@gmail.com</a> </span></p>
     </header>
 
     <div class="container">
