--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
       </script>
 
     </div>
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+        <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
         <script async>
         var arrayOfImages=document.getElementsByClassName('image')
         var arrayOfSources=["img/profilepic.jpg","img/myProfilepic.jpg","img/2048.jpg","img/familiar.jpg","img/phones.jpg","views/images/pizzeria.jpg"]
