--- a/index.html
+++ b/index.html
@@ -178,17 +178,16 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
   window.addEventListener("load", function(event) {
     logCRP();
   });
-
       </script>
-
+      <script async>
+      var arrayOfImages=document.getElementsByClassName('image')
+      var arrayOfSources=["img/profilepic.jpg","img/myProfilepic.jpg","img/2048.jpg","img/familiar.jpg","img/phones.jpg","views/images/pizzeria.jpg"]
+      for (var i=0;i<arrayOfImages.length;i++){
+        arrayOfImages[i].src=arrayOfSources[i];
+      }
     </div>
-        <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-        <script async>
-        var arrayOfImages=document.getElementsByClassName('image')
-        var arrayOfSources=["img/profilepic.jpg","img/myProfilepic.jpg","img/2048.jpg","img/familiar.jpg","img/phones.jpg","views/images/pizzeria.jpg"]
-        for (var i=0;i<arrayOfImages.length;i++){
-          arrayOfImages[i].src=arrayOfSources[i];
-        }
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+
         </script>
   </body>
 </html>
