--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
       <footer>
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
-      <script async>
+      <script asyn>
         function logCRP() {
     var t = window.performance.timing,
       dcl = t.domContentLoadedEventStart - t.domLoading,
@@ -187,7 +187,7 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
       });
     </script>
     </div>
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+        <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
 
   </body>
