--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
       <footer>
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
-      <script asyn>
+      <script async>
         function logCRP() {
     var t = window.performance.timing,
       dcl = t.domContentLoadedEventStart - t.domLoading,
