fix script images

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@ footer {
   padding: 0 0.5em;
   border-top: 1px solid #ccc;
 }
+@media print {
+  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
+  a, a:visited { color: #444 !important; text-decoration: underline; }
+  a[href]:after { content: " (" attr(href) ")"; }
+  tr, img { page-break-inside: avoid; }
+  img { max-width: 100% !important; }
+  @page { margin: 0.5cm; }
+  p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3{ page-break-after: avoid; }
+}
 
 /* Smartphones (portrait) */
 @media only screen and (max-width: 480px) {
@@ -192,10 +202,5 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
       images();
     });
     </script>
-
-
-        <!--  -->
-
-
   </body>
 </html>
