--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
   stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
 }
 
-    function images(){
-    var arrayOfImages=document.querySelectorAll('.image')
-    var arrayOfSources=["img/profilepic.jpg","img/myProfilepic.jpg","img/2048.jpg","img/familiar.jpg","img/phones.jpg","views/images/pizzeria.jpg"]
-    for (var i=0;i<arrayOfImages.length;i++){
-      arrayOfImages[i].src=arrayOfSources[i];
-    }
+function images(){
+      let arrayOfImages=document.querySelectorAll('.image')
+      let arrayOfSources=['img/profilepic.jpg','img/my.jpg','img/1.jpg','img/2.jpg','img/3.jpg','views/images/pizzeria.jpg'];
+      Array.from(arrayOfImages).forEach((name,i)=>{
+          name.setAttribute('src', arrayOfSources[i]);
+      });
   }
     window.addEventListener("load", function(event) {
       logCRP();
