--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ footer {
 
           <li>
             <img style="width: 100px;" class="image">
-            <a class="image">Cam's Pizzeria</a>
+            <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
         </ul>
