--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ b=!0;break a}}b=!1}b&&(Ba=!0)}Ud()||Ba||!Ed(new Od(1E4))||(J(36),Ba=!0);(O.gaplu
 
 
     function images(){
-    var arrayOfImages=document.querySelectorAll('.image')
+    var arrayOfImages=Array.from(document.querySelectorAll('.image'));
     var arrayOfSources=["img/myProfilepic.jpg","img/2048.jpg","img/familiar.jpg","img/phones.jpg","views/images/pizzeria.jpg"]
     for (var i=0;i<arrayOfImages.length;i++){
       arrayOfImages[i].setAttribute('src', arrayOfSources[i]);
